<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="edit_profile">Edit Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="interests">Interests</string>
    <string name="university">University</string>
    <string name="speciality">Speciality</string>
    <string name="academic_year">Academic Year</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="peers">Peers</string>

</resources>