<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unimapp.profile.editprofile.EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/profile_toolbar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cover_image"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.6"
            android:background="@color/stroke_color"
            app:layout_constraintBottom_toBottomOf="@+id/profile_toolbar"
            app:layout_constraintEnd_toEndOf="@+id/profile_toolbar"
            app:layout_constraintStart_toStartOf="@+id/profile_toolbar"
            app:layout_constraintTop_toTopOf="@+id/profile_toolbar" />

        <ImageView
            android:id="@+id/add_profile_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/ic_edit_profile_image"
            app:layout_constraintBottom_toBottomOf="@+id/profile_toolbar"
            app:layout_constraintEnd_toEndOf="@+id/profile_toolbar"
            app:layout_constraintStart_toStartOf="@+id/profile_toolbar"
            app:layout_constraintTop_toTopOf="@+id/profile_toolbar" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="@dimen/_84sdp"
            android:layout_height="@dimen/_84sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:src="@drawable/profile_image"
            android:visibility="visible"
            app:civ_border_color="@color/white"
            app:civ_border_width="4dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.6"
            android:src="@color/stroke_color"
            app:civ_border_color="@color/white"
            app:civ_border_width="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/user_image"
            app:layout_constraintEnd_toEndOf="@+id/user_image"
            app:layout_constraintStart_toStartOf="@+id/user_image"
            app:layout_constraintTop_toTopOf="@+id/user_image" />

        <ImageView
            android:id="@+id/add_profile_image"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_edit_profile_image"
            app:layout_constraintBottom_toBottomOf="@+id/user_image"
            app:layout_constraintEnd_toEndOf="@+id/user_image"
            app:layout_constraintStart_toStartOf="@+id/user_image"
            app:layout_constraintTop_toTopOf="@+id/user_image" />

        <com.unimapp.uitoolkit.input.InputWithHeaderView
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:header="@string/first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_image" />

        <com.unimapp.uitoolkit.input.InputWithHeaderView
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:header="@string/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstname" />

        <com.unimapp.uitoolkit.input.InputWithHeaderView
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:header="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name" />

        <com.unimapp.uitoolkit.input.InputWithHeaderView
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:header="@string/birthday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mail" />

        <TextView
            android:id="@+id/gender_title"
            style="@style/Unim_Text_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/gender"
            app:layout_constraintTop_toBottomOf="@id/birthday" />

        <RadioGroup
            android:id="@+id/gender_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/gender_title">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/male_button"
                style="@style/Unim_Radio_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/male" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/female_button"
                style="@style/Unim_Radio_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/female" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/other_button"
                style="@style/Unim_Radio_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/other" />
        </RadioGroup>

        <TextView
            android:id="@+id/interest_title"
            style="@style/Unim_Text_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/interests"
            app:layout_constraintTop_toBottomOf="@id/gender_types" />

        <com.unimapp.uitoolkit.tagview.TagView
            android:id="@+id/interests"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interest_title" />

        <TextView
            android:id="@+id/university_title"
            style="@style/Unim_Text_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/university"
            app:layout_constraintTop_toBottomOf="@id/interests" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/university_selector"
            style="@style/Unim_Selector_Dropdown"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@+id/university_title" />


        <TextView
            android:id="@+id/speciality_title"
            style="@style/Unim_Text_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/speciality"
            app:layout_constraintTop_toBottomOf="@id/university_selector" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/speciality_selector"
            style="@style/Unim_Selector_Dropdown"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@+id/speciality_title" />

        <TextView
            android:id="@+id/academic_year_title"
            style="@style/Unim_Text_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/academic_year"
            app:layout_constraintTop_toBottomOf="@id/speciality_selector" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/academic_year_selector"
            style="@style/Unim_Selector_Dropdown"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@+id/academic_year_title" />

        <TextView
            android:id="@+id/current_password_title"
            style="@style/Unim_Text_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/current_password"
            app:layout_constraintTop_toBottomOf="@id/academic_year_selector" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/current_password"
            style="@style/Unim_Main_TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/current_password_title"
            app:passwordToggleDrawable="@drawable/password_field_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/unim_main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_password"
                android:inputType="textPersonName"
                android:letterSpacing="0.7"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/new_password_title"
            style="@style/Unim_Text_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/new_password"
            app:layout_constraintTop_toBottomOf="@id/current_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password"
            style="@style/Unim_Main_TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/new_password_title"
            app:passwordToggleDrawable="@drawable/password_field_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/unim_main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPersonName"
                android:letterSpacing="0.7"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
